Fix styles on iphone 12

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1131,7 +1131,7 @@
   }
 }
 
-@media (max-width: 376px) {
+@media (max-width: 400px) {
   .hero-text h1 {
     font-size: 1.75rem; /* 28px */
     margin-bottom: 3rem; /* 48px, zmniejszone z 5rem (80px) */
